--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,36 +2,116 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
+
+permissions:
+  contents: read
 
 jobs:
-  test:
+  lint:
+    name: Lint Code
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.9"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.9"
 
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest httpx
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 black isort
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # This runs the tests in your 'tests/' folder
-    # - name: Run Tests
-    #   run: pytest
+      - name: Lint with flake8
+        run: |
+          # Stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # Exit-zero treats all errors as warnings
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        continue-on-error: true
+
+      - name: Check code formatting with black
+        run: |
+          black --check --diff .
+        continue-on-error: true
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Create models directory (if missing)
+        run: |
+          mkdir -p models
+          # Create placeholder files if models don't exist (for testing)
+          if [ ! -f models/best_model_gwo.json ]; then
+            echo '{"placeholder": true}' > models/best_model_gwo.json
+            echo "[]" > models/feature_columns.pkl
+            echo "placeholder" > models/scaler.pkl
+          fi
+
+      - name: Run tests
+        run: |
+          pytest tests/ -v --tb=short
+        env:
+          MODEL_DIR: ./models
+
+      - name: Test API endpoints
+        run: |
+          pytest tests/test_api.py -v
 
   build:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
     needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false
+          tags: aml-production:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  verify-structure:
+    name: Verify Project Structure
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Build Docker Image
-      run: docker build . --file Dockerfile --tag aml-production:latest
+      - name: Verify required files exist
+        run: |
+          test -f requirements.txt || (echo "requirements.txt missing" && exit 1)
+          test -f app/main.py || (echo "app/main.py missing" && exit 1)
+          test -f api/index.py || (echo "api/index.py missing" && exit 1)
+          test -f vercel.json || (echo "vercel.json missing" && exit 1)
+          test -f public/index.html || (echo "public/index.html missing" && exit 1)
+          echo "✅ All required files present"
